Add clickable cursor, comments toolbar

--- a/frontEnd/src/app/admin/admin.component.html
+++ b/frontEnd/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@
     <md-icon class="md-24" *ngIf="start.opened">arrow_back</md-icon>
   </button>
   <span class="remaining-space"></span>
-  <span [routerLink]="['/news/all']" class="header-title"> Mercury </span>
+  <span [routerLink]="['/news/all']" class="header-title clickable"> Mercury </span>
 </md-toolbar>
 <md-sidenav-container height="100%" style="top: 48px;" class="admin-container">
   <md-sidenav mode="side" opened="true" #start class="admin-sidenav">
