--- a/frontEnd/src/app/article-detail/comment/comment.component.scss
+++ b/frontEnd/src/app/article-detail/comment/comment.component.scss
@@ -6,17 +6,20 @@
   .remaining-space {
     flex: 1 1 auto;
   }
+  .sortable {
+    text-align: right;
+  }
   .sort {
     opacity: 0.5;
     font-size: 11px;
     font-weight: bold;
     text-align: center;
-    float: right;
+    display: inline-block;
     vertical-align: middle;
     line-height: 36px;
     margin-right: 10px;
     margin: 10px 5px;
-    width: 100px;
+    width: 80px;
   }
   .sort.active {
     border: 1px solid;
@@ -36,6 +39,22 @@
 
 .comment-divider {
   border-top: 2px solid #eee;
+}
+
+@media screen and (max-width: 990px) {
+  .mat-toolbar {
+    text-align: center;
+    .commentable {
+      font-size: 30px;
+    }
+    .sortable {
+      text-align: center;
+      .sort {
+        display: inline-block;
+        width: 100px;
+      }
+    }
+  }
 }
 
 
