--- a/frontEnd/src/styles.scss
+++ b/frontEnd/src/styles.scss
@@ -33,6 +33,10 @@ body {
       box-shadow: 0 2px 5px 0 rgba(0,0,0,0.24);
     }
 
+    md-sidenav-container /deep/ .mat-sidenav-content {
+      overflow-x: hidden;
+    }
+
     .clickable {
       &:hover {
         cursor: pointer
