--- a/frontEnd/src/app/swiper/swiper.component.scss
+++ b/frontEnd/src/app/swiper/swiper.component.scss
@@ -1,32 +1,78 @@
-swiper{
-    height: 90vh;
-    width: 100%;
-}
- 
-.header {
-    padding: 0 !important;
-    height: 90vh;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    .content {
-      text-align: left;
-      padding: 30px;
-      margin: 0 auto;
-      color: white;
-      position: absolute;
-      bottom: 20px;
-      left: 20px;
-      .description {
-        color: #cecece;
-        line-height: 1.5;
+.landing {
+  height: 90vh;
+  md-grid-tile {
+    background: lightblue;
+    .header-1,
+    .header-2 {
+      flex-direction: row;
+      .content,
+      .flex-col {
+        flex: 1;
+        color: black;
+      }
+      .content {
+        background: white;
+        font-size: 20px;
+        height: 100%;
+        text-align: center;
+        .body-info-container {
+          color: black;
+        }
       }
     }
   }
+}
 
-  @media screen and (max-width: 400px) {
+.header {
+  width: 100%;
+  padding: 0 !important;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100%;
+  font-family: 'Montserrat';
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 1.28;
+  color: #ffffff;
+  .content {
+    text-align: left;
+    padding: 30px;
+    margin: 0 auto;
+    color: white;
+    width: 100%;
+    .body-info-container {
+      font-family: 'Montserrat';
+      font-size: 10px;
+      color: #ffffff;
+      display: flex;
+      flex-direction: row;
+      margin-top: 20px;
+      .info {
+        margin-right: 25px;
+        md-icon {
+          vertical-align: middle;
+          opacity: 0.3;
+          margin-right: 10px;
+          height: 100%;
+        }
+      }
+      .info-category {
+        text-transform: uppercase;
+        border-bottom: 1px solid #cecece;
+        display: flex;
+        align-items: center;
+      }
+      .remaining-space {
+        flex: 1 1 auto;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
   .content {
     h3 {
       font-size: 18px;
