--- a/frontEnd/src/app/user/user.component.scss
+++ b/frontEnd/src/app/user/user.component.scss
@@ -1,26 +1,26 @@
 /*@import '~@angular/material/core/theming/prebuilt/pink-bluegrey';*/
+
 // @import '~@angular/material/core/theming/prebuilt/pink-bluegrey';
 @import '~@angular/material/theming';
 @import 'src/theming.scss';
 @include mat-core();
-
-#header-title, .category-button {
+#header-title,
+.category-button {
   font-family: 'Montserrat', 'Roboto', sans-serif
 }
 
 .user-card {
-    background-color: white;
-    .username-text {
-      color: black;
-    }
-
-    .email-text {
-      color: black;
-    }
-    img {
-      width: 50px;
-      height: 50px;
-    }
+  background-color: white;
+  .username-text {
+    color: black;
+  }
+  .email-text {
+    color: black;
+  }
+  img {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .remaining-space {
@@ -54,12 +54,26 @@ md-toolbar /deep/ .mat-toolbar-layout {
   width: 100%;
 }
 
+md-chip-list /deep/ .mat-chip-list-wrapper {
+  justify-content: center;
+}
+
+md-chip-list md-chip {
+  width: 24px;
+  height: 24px;
+  margin: 0;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 0px !important;
+}
+
 @media screen and (min-width: 801px) {
   .cat-btn {
     visibility: hidden;
   }
 }
-
 
 @media screen and (max-width: 800px) {
   .category-button {
