--- a/frontEnd/src/app/article-detail/comment/comment.component.html
+++ b/frontEnd/src/app/article-detail/comment/comment.component.html
@@ -20,7 +20,7 @@
               <input type="hidden" name="user_id" [value]="authService.userProfile.identities[0].user_id" [(ngModel)]="comment.user_id"
               #userId>
               <md-input-container style="width: 100%;" class="comment-input">
-                <input mdInput placeholder="Leave a comment as {{authService.userProfile.user_metadata.first_name + ' ' + authService.userProfile.user_metadata.last_name }}"
+                <input autocomplete="off" mdInput placeholder="Leave a comment as {{authService.userProfile.user_metadata.first_name + ' ' + authService.userProfile.user_metadata.last_name }}"
                   maxlength="300" rows="2" required #characterCountComment name="text" [(ngModel)]="comment.text" [mention]="mentionParticipants" [mentionSelect]="mentioned" (ngModelChange)="updateMentionedUser($event)"
                 />
                 <md-hint align="end">{{characterCountComment.value.length}} / 300</md-hint>
