--- a/frontEnd/src/app/article-detail/comment/comment.component.html
+++ b/frontEnd/src/app/article-detail/comment/comment.component.html
@@ -13,7 +13,7 @@
 <div class="row">
   <div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1 col-xs-12 comment-form">
     <div *ngIf="authService.authenticated() && authService.userProfile">
-      <form (ngSubmit)="onSubmit(commentForm.value)" #commentForm="ngForm">
+      <form (ngSubmit)="onSubmit(commentForm.value)" #commentForm="ngForm" role="form" novalidate>
         <md-list>
           <md-list-item>
             <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
