--- a/frontEnd/src/app/user/user.component.html
+++ b/frontEnd/src/app/user/user.component.html
@@ -2,7 +2,7 @@
   <button md-icon-button (click)="start.toggle(); end.close()" class="menu-btn">
     <md-icon class="md-24">menu</md-icon>
   </button>
-  <span [routerLink]="['/news/all']" id="header-title" class="clickable"> Mercury </span>
+  <span [routerLink]="['/home']" id="header-title" class="clickable"> Mercury </span>
   <span class="remaining-space"></span>
   <!--<span>
     <button md-icon-button (click)="start.toggle()" class="menu-btn">
