--- a/frontEnd/src/app/admin/admin.component.html
+++ b/frontEnd/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@
     <md-icon class="md-24" *ngIf="start.opened">arrow_back</md-icon>
   </button>
   <span class="remaining-space"></span>
-  <span [routerLink]="['/news/all']" class="header-title clickable"> Mercury </span>
+  <span [routerLink]="['/home']" class="header-title clickable"> Mercury </span>
 </md-toolbar>
 <md-sidenav-container height="100%" style="top: 48px;" class="admin-container">
   <md-sidenav mode="side" opened="true" #start class="admin-sidenav">
@@ -25,7 +25,7 @@
         <md-card-subtitle class="email-text">anonymous@gmail.com</md-card-subtitle>
       </md-card-header>
     </md-card>
-      
+
     <md-nav-list dense>
       <md-list-item>
         <a md-line [routerLink]="['dashboard']">Dashboard</a>
@@ -64,7 +64,7 @@
     </md-nav-list>
   </md-sidenav>
   <div class="admin-content">
-    
-    <router-outlet></router-outlet>  
+
+    <router-outlet></router-outlet>
   </div>
 </md-sidenav-container>
