--- a/frontEnd/src/app/landing/landing.component.scss
+++ b/frontEnd/src/app/landing/landing.component.scss
@@ -69,6 +69,9 @@ md-toolbar /deep/ .mat-toolbar-layout {
   }
 }
 
+.side-nav-content {
+  height: 100%;
+}
 .landing {
   height: 90vh;
   md-grid-tile {
@@ -175,6 +178,16 @@ md-toolbar /deep/ .mat-toolbar-layout {
       }
     }
   }
+}
+
+
+.category-timeline-container:nth-child(odd) {
+  background: #e9e9e9;
+  opacity: 0.5;
+}
+
+.category-timeline-container:nth-child(even) {
+  background: #fafafa;
 }
 
 @media screen and (max-width: 400px) {
