--- a/frontEnd/src/app/landing/landing.component.scss
+++ b/frontEnd/src/app/landing/landing.component.scss
@@ -1,22 +1,25 @@
 /*@import '~@angular/material/core/theming/prebuilt/pink-bluegrey';*/
-
 // @import '~@angular/material/core/theming/prebuilt/pink-bluegrey';
 @import '~@angular/material/theming';
 @import 'src/theming.scss';
 @include mat-core();
+
 #header-title,
 .category-button {
-  font-family: 'Montserrat', 'Roboto', sans-serif
+  font-family: 'Montserrat', 'Roboto', sans-serif;
 }
 
 .user-card {
   background-color: white;
+
   .username-text {
     color: black;
   }
+
   .email-text {
     color: black;
   }
+
   img {
     width: 50px;
     height: 50px;
@@ -33,6 +36,7 @@
 
 .md-sidenav {
   width: 300px;
+
   md-nav-list {
     md-list-item {
       a {
@@ -40,8 +44,9 @@
           text-decoration: none;
         }
         outline: none;
-        text-decoration: none
+        text-decoration: none;
       }
+
       button {
         color: mat-color($primary);
       }
@@ -54,26 +59,53 @@ md-toolbar /deep/ .mat-toolbar-layout {
   width: 100%;
 }
 
-@media screen and (min-width: 801px) {
-  .cat-btn {
-    visibility: hidden;
-  }
+.notifications-count {
+  display: flex;
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  background: royalblue;
+  font-size: 10px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  top: 20px;
+  right: 60px;
 }
 
+.notifications-icon, .personal-icon {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 801px) {
+  .cat-btn {
+    display: none;
+  }
+}
 @media screen and (max-width: 800px) {
   .category-button {
     display: none;
   }
+
   .cat-btn {
-    visibility: visible;
+    display: inline-block;
+  }
+
+  .notifications-count {
+    right: 100px;
   }
 }
 
 .side-nav-content {
   height: 100%;
 }
+
 .landing {
   height: 90vh;
+
   md-grid-tile {
     background: lightblue;
     // .header-1 {
@@ -140,16 +172,19 @@ md-toolbar /deep/ .mat-toolbar-layout {
   font-weight: bold;
   line-height: 1.28;
   color: #ffffff;
+
   .content {
     text-align: left;
     padding: 25px;
     margin: 0 auto;
     color: white;
     width: 100%;
+
     .description {
       font-size: 20px;
       color: #e3e3e3;
     }
+
     .body-info-container {
       font-family: 'Montserrat';
       font-size: 10px;
@@ -157,8 +192,10 @@ md-toolbar /deep/ .mat-toolbar-layout {
       display: flex;
       flex-direction: row;
       margin-top: 20px;
+
       .info {
         margin-right: 25px;
+
         md-icon {
           vertical-align: middle;
           opacity: 0.3;
@@ -166,6 +203,7 @@ md-toolbar /deep/ .mat-toolbar-layout {
           height: 100%;
         }
       }
+
       .info-category {
         text-transform: uppercase;
         border-bottom: 1px solid #cecece;
@@ -173,6 +211,7 @@ md-toolbar /deep/ .mat-toolbar-layout {
         align-items: center;
         margin: 0;
       }
+
       .remaining-space {
         flex: 1 1 auto;
       }
@@ -180,16 +219,13 @@ md-toolbar /deep/ .mat-toolbar-layout {
   }
 }
 
-
 .category-timeline-container:nth-child(odd) {
-  background: #e9e9e9;
-  opacity: 0.5;
+  background: rgba(233, 233, 233, 0.5);
 }
 
 .category-timeline-container:nth-child(even) {
   background: #fafafa;
 }
-
 @media screen and (max-width: 400px) {
   .content {
     h3 {
@@ -197,34 +233,34 @@ md-toolbar /deep/ .mat-toolbar-layout {
     }
   }
 }
-
 @media screen and (max-width: 1120px) {
   .landing {
     md-grid-tile {
       .header {
         .content {
           font-size: 20px;
+
           .description {
             font-size: 12px;
           }
         }
       }
-        // .header-1,
-        // .header-2 {
-        //   .content {
-        //     font-size: 15px;
-        //     .body-info-container {
-        //       left: 5px;
-        //       right: 5px;
-        //       .info {
-        //         md-icon {
-        //           margin-right: 0px;
-        //           font-size: 15px;
-        //         }
-        //       }
-        //     }
-        //   }
-        // }
+      // .header-1,
+      // .header-2 {
+      //   .content {
+      //     font-size: 15px;
+      //     .body-info-container {
+      //       left: 5px;
+      //       right: 5px;
+      //       .info {
+      //         md-icon {
+      //           margin-right: 0px;
+      //           font-size: 15px;
+      //         }
+      //       }
+      //     }
+      //   }
+      // }
     }
   }
 }
