--- a/frontEnd/src/app/landing/landing.component.html
+++ b/frontEnd/src/app/landing/landing.component.html
@@ -1,128 +1,42 @@
-<md-toolbar color="primary" style="height: 10vh; position: fixed; z-index: 1;">
-  <button md-icon-button (click)="start.toggle(); end.close()" class="menu-btn">
-    <md-icon class="md-24">menu</md-icon>
-  </button>
-  <span [routerLink]="['/home']" id="header-title" class="clickable"> Mercury </span>
-  <span class="remaining-space"></span>
-  <span>
-    <md-icon class="md-24 notifications-icon">notifications</md-icon>
-    <span class="notifications-count">{{ notifications ? notifications.length : 0}}</span>
-  </span>
-  <span class="menu-btn">
-    <md-icon class="md-24 personal-icon">face</md-icon>
-  </span>
-  <button md-icon-button (click)="end.toggle(); start.close();" class="cat-btn">
-    <md-icon class="md-24">more_vert</md-icon>
-  </button>
-</md-toolbar>
-
-<md-sidenav-container style="height: 90vh; top: 10vh;">
-  <md-sidenav class="md-sidenav" align="start" #start mode="over" style="height: 100%; position: fixed;">
-    <md-card class="user-card">
-      <md-card-header *ngIf="auth.authenticated() && auth.userProfile">
-        <img md-card-avatar [src]="auth.userProfile.picture">
-        <md-card-title class="username-text">{{auth.userProfile.first_name || auth.userProfile.name}} {{auth.userProfile.last_name}}</md-card-title>
-        <md-card-subtitle class="email-text">{{auth.userProfile.email || auth.userProfile.gender}}</md-card-subtitle>
-      </md-card-header>
-      <md-card-header *ngIf="!auth.authenticated()">
-        <img md-card-avatar src="assets/images/logo.png">
-        <md-card-title class="username-text">anonymous</md-card-title>
-        <md-card-subtitle class="email-text">anonymous@gmail.com</md-card-subtitle>
-      </md-card-header>
-    </md-card>
-    <md-nav-list>
-      <md-list-item>
-        <a md-line href="#">Favorites</a>
-        <button md-icon-button>
-          <md-icon>favorite</md-icon>
-        </button>
-      </md-list-item>
-      <md-divider></md-divider>
-      <md-list-item>
-        <a md-line href="#">Account</a>
-        <button md-icon-button>
-          <md-icon>person</md-icon>
-        </button>
-      </md-list-item>
-      <md-list-item>
-        <a md-line href="#">Comment</a>
-        <button md-icon-button>
-          <md-icon>comment</md-icon>
-        </button>
-      </md-list-item>
-      <md-list-item *ngIf="auth.authenticated() && auth.userProfile && auth.userProfile.role == '58cd45e0879f9e00c88747bf'">
-        <button md-icon-button>
-          <md-icon>settings</md-icon>
-        </button>
-        <a md-line [routerLink]="['/admin']">Admin</a>
-      </md-list-item>
-      <md-divider></md-divider>
-      <md-list-item *ngIf="!auth.authenticated()">
-        <button md-icon-button>
-          <md-icon>vpn_key</md-icon>
-        </button>
-        <a md-line (click)="auth.login()">Log In</a>
-      </md-list-item>
-        <md-list-item *ngIf="auth.authenticated()">
-        <button md-icon-button>
-          <md-icon>vpn_key</md-icon>
-        </button>
-        <a md-line (click)="auth.logout()">Log Out</a>
-      </md-list-item>
-    </md-nav-list>
-  </md-sidenav>
-
-  <md-sidenav class="md-sidenav" align="end" #end mode="over" style="height: 100%; position: fixed;">
-    <md-nav-list>
-      <md-list-item *ngFor="let category of categoryList">
-        <a md-line (click)="end.close()" [routerLink]="['/news', category.name | lowercase]">{{category.name}} </a>
-        <button md-icon-button>
-          <md-icon>loyalty</md-icon>
-        </button>
-      </md-list-item>
-    </md-nav-list>
-  </md-sidenav>
-
-  <div class="side-nav-content" *ngIf="categoryList">
-    <swiper [config]="config">
-      <div class="swiper-wrapper">
-        <md-grid-list cols="2" rowHeight="fit" class="landing swiper-slide" *ngFor="let page of categoryPage; let j = index;">
-          <md-grid-tile *ngFor="let category of page; let i = index">
-            <div class="swiper-slide header clickable" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(' + backgroundUrl[i] + ')'}"
-              [routerLink]="['/news', category.name | lowercase]" skipLocationChange>
+<div class="side-nav-content" *ngIf="categoryList">
+  <swiper [config]="config">
+    <div class="swiper-wrapper">
+      <md-grid-list cols="2" rowHeight="fit" class="landing swiper-slide" *ngFor="let page of categoryPage; let j = index;">
+        <md-grid-tile *ngFor="let category of page; let i = index">
+          <div class="swiper-slide header clickable" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url(' + backgroundUrl[i] + ')'}"
+            [routerLink]="['/news', category.name | lowercase]">
+            <div [class]="'header header-' + i">
+              <div class="flex-col-start"></div>
+              <div class="content">
+                <p class="title">{{category.name}}</p>
+                <p class="description">{{category.description}}</p>
+              </div>
+              <div class="flex-col-end"></div>
+            </div>
+          </div>
+        </md-grid-tile>
+        <ng-template [ngIf]="j == (categoryPage.length -1) && comingSoonCategory.length > 0">
+          <md-grid-tile *ngFor="let i of comingSoonCategory">
+            <div class="swiper-slide header clickable" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(' + 'https://s-media-cache-ak0.pinimg.com/736x/b5/02/a6/b502a622a46b25efad731435b4b9c74b.jpg' + ')', 'background-repeat':'round'}">
               <div [class]="'header header-' + i">
                 <div class="flex-col-start"></div>
                 <div class="content">
-                  <p class="title">{{category.name}}</p>
-                  <p class="description">{{category.description}}</p>
+                  <p class="title">{{''}}</p>
+                  <p class="description">{{''}}</p>
                 </div>
                 <div class="flex-col-end"></div>
               </div>
             </div>
           </md-grid-tile>
-          <ng-template [ngIf]="j == (categoryPage.length -1) && comingSoonCategory.length > 0">
-            <md-grid-tile *ngFor="let i of comingSoonCategory">
-              <div class="swiper-slide header clickable" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(' + 'https://s-media-cache-ak0.pinimg.com/736x/b5/02/a6/b502a622a46b25efad731435b4b9c74b.jpg' + ')', 'background-repeat':'round'}">
-                <div [class]="'header header-' + i">
-                  <div class="flex-col-start"></div>
-                  <div class="content">
-                    <p class="title">{{''}}</p>
-                    <p class="description">{{''}}</p>
-                  </div>
-                  <div class="flex-col-end"></div>
-                </div>
-              </div>
-            </md-grid-tile>
-          </ng-template>
-        </md-grid-list>
-      </div>
-      <div class="swiper-pagination swiper-pagination-white"></div>
-    </swiper>
+        </ng-template>
+      </md-grid-list>
+    </div>
+    <div class="swiper-pagination swiper-pagination-white"></div>
+  </swiper>
 
-    <div class="latest-news-area">
-      <div *ngFor="let category of categoryList" class="category-timeline-container" >
-        <app-category-timeline [category]="category"></app-category-timeline>
-      </div>
+  <div class="latest-news-area">
+    <div *ngFor="let category of categoryList" class="category-timeline-container" >
+      <app-category-timeline [category]="category"></app-category-timeline>
     </div>
   </div>
-</md-sidenav-container>
+</div>
