--- a/frontEnd/src/app/user/user.component.html
+++ b/frontEnd/src/app/user/user.component.html
@@ -12,7 +12,7 @@
     <md-icon class="md-24 personal-icon">face</md-icon>
   </button>
   <md-menu #appMenu="mdMenu" [overlapTrigger]="false">
-    <button md-menu-item *ngFor="let noti of notifications | json"> {{ noti? noti.content : "No noti yet"}} </button>
+    <button md-menu-item *ngFor="let noti of notifications"> {{noti.message}} </button>
   </md-menu>
 </md-toolbar>
 
