--- a/frontEnd/src/app/landing/landing.component.scss
+++ b/frontEnd/src/app/landing/landing.component.scss
@@ -148,6 +148,7 @@
     padding-left: 40px;
     border-bottom: 2px solid #dfdfdf;
     margin: 0 -5px;
+    text-transform: capitalize;
   }
 }
 @media screen and (max-width: 400px) {
