--- a/frontEnd/src/app/landing/landing.component.html
+++ b/frontEnd/src/app/landing/landing.component.html
@@ -36,20 +36,18 @@
 
   <div class="latest-news-area">
     <div class="headline-title row">
-      <div class="col-md-4 col-sm-4">
-
-      </div>
+      <div class="col-md-4 col-sm-4"></div>
       <div class="col-md-8 col-sm-8 type-container">
-        <span [ngClass]="{active: newsType == 'latest'}" (click)="newsType = 'latest'">
-          Latest stories
+        <span class="active">
+          {{activeTab}}
         </span>
-        <span [ngClass]="{active: newsType == 'popular'}" (click)="newsType = 'popular'">
-          Most popular
+        <span (click)="updateTab()">
+          {{inactiveTab}}
         </span>
       </div>
     </div>
     <div *ngFor="let category of categoryList" class="category-timeline-container">
-      <app-category-timeline [category]="category" [type]="newsType"></app-category-timeline>
+      <app-category-timeline [category]="category" [type]="activeTab"></app-category-timeline>
     </div>
   </div>
 </div>
