--- a/frontEnd/src/styles.scss
+++ b/frontEnd/src/styles.scss
@@ -50,7 +50,7 @@ body {
 
     .cdk-overlay-container .mat-menu-panel.my-menu {
       max-width: 400px;
-
+      max-height: 600px;
       .mat-menu-content .mat-menu-item {
         color: #000;
         font-size: 12px;
