--- a/frontEnd/src/app/articles-list/article-editor/article-editor.component.html
+++ b/frontEnd/src/app/articles-list/article-editor/article-editor.component.html
@@ -15,7 +15,7 @@
       </md-input-container>
 
       <md-input-container style="width: 100%">
-        <input mdInput placeholder="Author (current user)" [(ngModel)]="articleDetail.author" id="author" name="author">
+        <input mdInput placeholder="Author (current user)" [(ngModel)]="articleDetail.author" id="author" name="author"/>
       </md-input-container>
 
       <md-select style="width: 100%; margin: 20px 0px;" placeholder="Category" [(ngModel)]="articleDetail.category" name="category">
