--- a/frontEnd/src/app/admin/admin.component.scss
+++ b/frontEnd/src/app/admin/admin.component.scss
@@ -1,51 +1,61 @@
-@import '~@angular/material/theming';
-@import 'src/theming.scss';
+@import "~@angular/material/theming";
+@import "src/theming.scss";
 
-@include mat-core(); // include all mixins
+@include mat-core;
+
+// include all mixins
 
 html, body, material-app, md-sidenav-container, .admin-content {
-  margin: 0;
-  width: 100%;
-  height: 100%;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .admin-container {
-  .admin-sidenav {
-    width: 250px;
-    box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);    
-    .user-card {
-      img {
-        width: 50px;
-        height: 50px;
-      }
-    }
-  
-    md-nav-list {
-      md-list-item {
-        a {
-          &:hover {
-            text-decoration: none;
-          }
-          outline: none;
-          text-decoration: none
+    .admin-sidenav {
+        box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.2), 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12);
+
+        .user-card {
+            img {
+                width: 50px;
+                height: 50px;
+            }
         }
-        button {
-          color: mat-color($primary);
+
+        md-nav-list {
+            md-list-item {
+                a {
+                    &:hover {
+                        text-decoration: none;
+                    }
+
+                    outline: none;
+                    text-decoration: none;
+                }
+
+                button {
+                    color: mat-color($primary);
+                }
+            }
+
+            md-list-item.md-list-item {
+                // font-size: 14px !important;
+           
+            }
         }
-      }
-      md-list-item.md-list-item {
-        font-size: 14px !important;
-      }
     }
-  }
+
+    .admin-content {
+        min-height: calc(100vh - 64px);
+    }
 }
 
 .remaining-space {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
 .header-title {
-  padding-right: 12px;
+    padding-right: 12px;
 }
 
 // @media screen and (max-width: 800px) {
