--- a/frontEnd/src/app/users-list/users-list.component.html
+++ b/frontEnd/src/app/users-list/users-list.component.html
@@ -17,12 +17,14 @@
               [stacked]="stacked"
               [globalFilter]="gb"
               [(selection)]="selectedUser"
+              resizableColumns="true" 
+              columnResizeMode="fit"
               #dt
               *ngIf="visible" >
-    <p-column field="first_name" header="First name" [sortable]="true"></p-column>
-    <p-column field="last_name" header="Last name" [sortable]="true"></p-column>
+    <p-column field="user_metadata.first_name" header="First name" [sortable]="true"></p-column>
+    <p-column field="user_metadata.last_name" header="Last name" [sortable]="true"></p-column>
     <p-column field="email" header="Email" [sortable]="true"></p-column>
-    <p-column field="phone" header="Phone" [sortable]="true"></p-column>
+    <p-column field="user_metadata.phone" header="Phone" [sortable]="true"></p-column>
     <p-column field="role" header="Role" [sortable]="true"></p-column>
     <p-column [style]="!stacked ? {'text-align':'center'} : {}" [sortable]="true">
         <template pTemplate="header">
@@ -33,7 +35,7 @@
                             (change)="changeState($event, user)"
                             style="display: inline-block"
                             color="primary"
-                            *ngIf="user._id != auth.userProfile._id && user.role != 1">
+                            *ngIf="user._id != auth.userProfile._id && user.role != '58cd45e0879f9e00c88747bf'">
             </md-slide-toggle>
         </template>
     </p-column>
