Fix wrong menu position

--- a/frontEnd/src/app/articles-list/articles-list.component.html
+++ b/frontEnd/src/app/articles-list/articles-list.component.html
@@ -33,5 +33,5 @@
       </div>
     </footer>
   </p-dataTable>
-  <p-contextMenu #cm [model]="menuItems"></p-contextMenu>
+  <p-contextMenu #cm [model]="menuItems" appendTo="body"></p-contextMenu>
 </div>
