Change img height and make article clickable

--- a/frontEnd/src/app/landing/category-timeline/category-timeline.component.html
+++ b/frontEnd/src/app/landing/category-timeline/category-timeline.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="col-md-8 col-sm-8 article-container">
-    <div class="article" *ngFor="let article of articles | orderBy: orderField : isReverse | slice:0:3">
+      <div class="article clickable" [routerLink]="['/news', category.name.toLowerCase(), article._id]" *ngFor="let article of articles | orderBy: orderField : isReverse | slice:0:3">
         <div class="card-container">
           <md-card>
             <md-card-title-group>
