--- a/frontEnd/src/app/landing/category-timeline/category-timeline.component.scss
+++ b/frontEnd/src/app/landing/category-timeline/category-timeline.component.scss
@@ -2,6 +2,8 @@
 @import 'src/theming.scss';
 @include mat-core();
 
+$min-width: 140px;
+
 .category-timeline {
   padding: 0 200px 0 100px;
 
@@ -68,9 +70,9 @@
   }
 
   img.mat-card-md-image {
-    min-width: 112px;
-    width: 112px;
-    min-height: 100%;
+    min-width: $min-width;
+    width: $min-width;
+    min-height: calc($min-width * 0.75);
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     margin: 0 0 0 40px;
   }
